# graphics-cards

./: README.md
Lab1/: CMakeLists.txt  main.c  matrices_mul_local
Lab2/: CMakeLists.txt  main.c  prefixSum.cl
